# cml

./: .env.example  .gitignore  CLAUDE.md  PLAN.md  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml  railway.toml  start.sh
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py
backend/app/: config.py  database.py  dependencies.py  main.py
backend/app/models/: __init__.py  analytics_event.py  appointment.py  chat_session.py  complaints_decision.py  complaints_summary.py  firm_user.py  office.py  organisation.py  price_card.py  regulatory_decision.py  regulatory_summary.py  review.py
backend/app/schemas/: analytics.py  appointment.py  chat.py  common.py  firm.py  review.py  search.py
backend/app/services/: auth.py  chat.py  email.py  followup_tokens.py  geocoding.py  price_calc.py  ranking.py  reviews.py  scorecard.py  search.py
backend/app/tasks/: followups.py  review_sync.py  scheduler.py
backend/scripts/: import_leo_csv.py  import_master_export.py  import_sra_csv.py  import_sra_decisions_csv.py  seed_price_cards.py  seed_synthetic.py  smoke_test.py
backend/scripts/seed_data/: leo_decisions.csv  sra_decisions.csv  sra_firms.csv
backend/tests/: conftest.py
backend/tests/integration/: test_admin_analytics.py  test_admin_appointments.py  test_admin_organisations.py  test_appointments.py  test_callbacks_bulk.py  test_firm_auth.py  test_firm_contact_endpoint.py  test_firm_dashboard.py  test_firm_pricing.py  test_firm_profile.py  test_firm_reviews.py  test_followups_jobs.py  test_health.py  (+4 more)
(+110 files in other folders)
